test/tests/operators/every/bad_transform.txt
error: expected void, got events
 --> tests/operators/every/bad_transform.tql:7:3
  |
7 |   version
  |   ^^^^^^^ 
  |
